<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="google_sign_in">Google Sign-In</string>
    <string name="login">login</string>
    <string name="sign_up">Sign-Up</string>
    <string name="raze_galactic">Raze Galactic</string>
    <string name="show_more">Show More</string>
    <string name="by_signing_up_i_agree">By signing up, I agree to Raze Galactic\'s Terms of Service, Privacy Policy, Refund Policy, and Accidental Vacuum Induced Asphyxiation Policy</string>

    <string name="space_stations">Space Stations</string>
    <string name="rovers">Rovers</string>
    <string name="flights">Flights</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="dca">DCA</string>
    <string name="mars">MARS</string>
    <string name="traveller">1 Traveller</string>
    <string name="depart">Depart</string>

</resources>