<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewRazeGalactic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/raze_galactic"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewRocket"
        app:layout_constraintStart_toEndOf="@+id/imageViewRocket"
        app:layout_constraintTop_toTopOf="@+id/imageViewRocket" />

    <ImageView
        android:id="@+id/imageViewRocket"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_rocket"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="@+id/buttonGoogleSignIn"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoogleSignIn" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSignUp"
        app:layout_constraintStart_toEndOf="@+id/buttonSignUp"
        app:layout_constraintTop_toTopOf="@+id/buttonSignUp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/google_sign_in"
        app:layout_constraintStart_toStartOf="@+id/textViewRazeGalactic"
        app:layout_constraintTop_toBottomOf="@+id/textViewRazeGalactic" />

    <TextView
        android:id="@+id/textViewShowMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/show_more"
        app:layout_constraintStart_toStartOf="@+id/buttonSignUp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

    <TextView
        android:id="@+id/textViewBySigningUp"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:text="@string/by_signing_up_i_agree"
        app:layout_constraintStart_toStartOf="@+id/textViewShowMore"
        app:layout_constraintTop_toBottomOf="@+id/textViewShowMore" />
</androidx.constraintlayout.widget.ConstraintLayout>