<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/constraintLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  tools:context=".MainActivity2">

  <ImageView
    android:id="@+id/spaceStationIcon"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginTop="15dp"
    android:src="@drawable/space_station_icon"
    app:layout_constraintEnd_toStartOf="@+id/flightsIcon"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintHorizontal_chainStyle="spread"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_conversion_absoluteHeight="30dp"
    tools:layout_conversion_absoluteWidth="30dp" />

  <ImageView
    android:id="@+id/flightsIcon"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:src="@drawable/rocket_icon"
    app:layout_constraintBottom_toBottomOf="@+id/spaceStationIcon"
    app:layout_constraintEnd_toStartOf="@+id/roverIcon"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/spaceStationIcon"
    app:layout_constraintTop_toTopOf="@+id/spaceStationIcon"
    tools:layout_conversion_absoluteHeight="30dp"
    tools:layout_conversion_absoluteWidth="30dp" />

  <ImageView
    android:id="@+id/roverIcon"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:src="@drawable/rover_icon"
    app:layout_constraintBottom_toBottomOf="@+id/flightsIcon"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/flightsIcon"
    app:layout_constraintTop_toTopOf="@+id/flightsIcon"
    tools:layout_conversion_absoluteHeight="30dp"
    tools:layout_conversion_absoluteWidth="30dp" />

  <TextView
    android:id="@+id/roverLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/rovers"
    app:layout_constraintEnd_toEndOf="@+id/roverIcon"
    app:layout_constraintStart_toStartOf="@+id/roverIcon"
    app:layout_constraintTop_toBottomOf="@+id/roverIcon" />

  <TextView
    android:id="@+id/flightsLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/flights"
    app:layout_constraintEnd_toEndOf="@+id/flightsIcon"
    app:layout_constraintStart_toStartOf="@+id/flightsIcon"
    app:layout_constraintTop_toBottomOf="@+id/flightsIcon" />

  <TextView
    android:id="@+id/spaceStationLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/space_stations"
    app:layout_constraintEnd_toEndOf="@+id/spaceStationIcon"
    app:layout_constraintStart_toStartOf="@+id/spaceStationIcon"
    app:layout_constraintTop_toBottomOf="@+id/spaceStationIcon" />

  <TextView
    android:id="@+id/textView1"
    android:layout_width="124dp"
    android:layout_height="98dp"
    android:layout_centerVertical="true"
    android:layout_marginEnd="44dp"
    android:layout_toStartOf="@id/doubleArrowsIcon"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:paddingEnd="20dp"
    android:text="@string/dca"
    android:textColor="@android:color/white"
    app:layout_constraintBottom_toBottomOf="@+id/doubleArrowsIcon"
    app:layout_constraintEnd_toEndOf="@+id/doubleArrowsIcon"
    app:layout_constraintTop_toTopOf="@+id/doubleArrowsIcon" />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="124dp"
    android:layout_height="98dp"
    android:layout_centerVertical="true"
    android:layout_marginStart="44dp"
    android:layout_toEndOf="@id/doubleArrowsIcon"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:paddingStart="20dp"
    android:text="@string/mars"
    android:textColor="@android:color/white"
    app:layout_constraintBottom_toBottomOf="@+id/doubleArrowsIcon"
    app:layout_constraintStart_toStartOf="@+id/doubleArrowsIcon"
    app:layout_constraintTop_toTopOf="@+id/doubleArrowsIcon" />

  <ImageView
    android:id="@+id/doubleArrowsIcon"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_centerInParent="true"
    android:layout_marginBottom="40dp"
    android:src="@drawable/double_arrows"
    app:layout_constraintBottom_toTopOf="@+id/guideline1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="0dp" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="1" />

  <com.google.android.material.switchmaterial.SwitchMaterial
    android:id="@+id/switch1"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="200dp"
    android:background="@color/colorAccent"
    android:padding="8dp"
    android:switchPadding="24dp"
    android:text="@string/one_way"
    android:textColor="@android:color/white"
    app:layout_constraintStart_toStartOf="@+id/guideline2"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/switch1"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/colorAccent"
    android:padding="8dp"
    android:text="@string/traveller"
    android:textColor="@android:color/white"
    app:layout_constraintStart_toStartOf="@+id/guideline2"
    app:layout_constraintTop_toBottomOf="@+id/switch1" />

  <ImageView
    android:id="@+id/rocketIcon"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:src="@drawable/rocket_icon"
    app:layout_constraintCircle="@id/galaxyIcon"
    app:layout_constraintCircleAngle="270"
    app:layout_constraintCircleRadius="100dp"
      tools:ignore="MissingConstraints" />

  <ImageView
    android:id="@+id/galaxyIcon"
    android:layout_width="10dp"
    android:layout_height="10dp"
    android:layout_centerInParent="true"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:src="@drawable/galaxy"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline1" />

  <Button
    android:id="@+id/departButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:text="@string/depart"
    android:textColor="@android:color/white"
    app:backgroundTint="@color/colorPrimary"
    app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
